--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
   },
   "dependencies": {
     "react": "16.2.0",
-    "react-native": "0.52.0"
+    "react-native": "0.52.0",
+    "react-native-elements": "^0.19.0",
+    "react-native-modal": "^4.1.1",
+    "react-native-searchbar": "^1.14.0",
+    "react-native-table-component": "^1.1.3",
+    "react-native-vector-icons": "^4.5.0",
+    "react-navigation": "^1.0.0-beta.27"
   },
   "devDependencies": {
     "babel-jest": "22.1.0",
